# OpenBimRL-Engine

./: .classpath  .dockerignore  .gitignore  .gitmodules  .project  Dockerfile  Makefile  README.md  pom.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/scripts/: sync-rfc-issues.sh
.github/workflows/: build_and_test.yaml  maven-publish.yml  rfc-sync.yml
rfc/: README.md  rfc-1-custom-script-functions.md
scripts/: build-native.sh
src/: App.kt  RunExample.java
src/ifc/: Adapter.kt  IIFCLabel.kt  IIFCRepresentation.kt  IIFCShapeRepresentation.kt
src/jvm/: ConsoleApplication.kt
src/main/: ConsoleApplication.kt  RunExample.java
src/main/cpp/: CMakeLists.txt  ifc2x3_init.cpp  ifc4_init.cpp  ifc_init.cpp  lib.c  lib.cpp  test.cpp
src/main/cpp/functions/: baseFunction.cpp  filterByElement.cpp  filterByGUID.cpp  function.cpp  test.cpp
src/main/cpp/include/: JNA_typedefs.hpp  ifc_init.hpp  lib.h  structs.h  test.h  types.hpp
src/main/cpp/include/functions/: filterByElement.hpp  filterByGUID.h  filterByGUID.hpp  function.hpp  getBoundingBox.hpp  test.hpp
src/main/cpp/include/types/: IFC_typedefs.hpp  JNA_typedefs.hpp
src/main/cpp/include/utils/: ifcGetProperties.hpp  ifcObjectToString.hpp  ifc_init.hpp  ifc_properties.hpp  ifc_quantities.hpp
src/main/cpp/include/utils/OpenBIMRL/: file.hpp  ifcStandards.hpp
src/main/cpp/utils/: ifc_init.cpp  ifc_properties.cpp  ifc_quantities.cpp  native_ifc_object_to_string.cpp  native_initIfc.cpp
src/model/: AbstractResultObject.java  AbstractRuleDefinition.java  ResultObject.java  ResultObjectGroup.java  (+4 more)
(+457 files in other folders)
